--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+
+.board-container{
+    display: flex;
+    justify-content: center;
+}
+
 #game-board{
     display: grid;
     grid-template-columns: 0fr 0fr 0fr;
@@ -7,4 +13,10 @@
     height: 100px;
     width: 100px;
     border: 1px solid black;
+}
+
+.winner-message{
+    display: flex;
+    justify-content: center;
+    justify-items: center;
 }
