removed excess borders around the game board

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 
-.board-container{
+/* .board-container{
     display: flex;
     justify-content: center;
-}
+} */
 
 #game-board{
     display: grid;
@@ -14,6 +14,22 @@
     width: 100px;
     border: 1px solid black;
 }
+
+.cell:first-child, .cell:nth-child(2), .cell:nth-child(3){
+    border-top: none;
+}
+
+.cell:nth-child(3), .cell:nth-child(6), .cell:nth-child(9){
+    border-right: none;
+}
+.cell:nth-child(1), .cell:nth-child(4), .cell:nth-child(7){
+    border-left: none;
+}
+
+.cell:nth-child(7), .cell:nth-child(8), .cell:nth-child(9){
+    border-bottom: none;
+}
+
 
 .winner-message{
     display: flex;
