--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,12 @@
 }
 
 .cell{
+    display: inline-block;
     height: 100px;
     width: 100px;
+    vertical-align: middle;
+    line-height: 100px;
+    text-align: center;
     border: 1px solid black;
 }
 
