--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,13 @@
     cursor: pointer;
 }
 
+.cell:hover{
+    -webkit-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.5); 
+    box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.5);
+}
+
+
+
 .cell:first-child, .cell:nth-child(2), .cell:nth-child(3){
     border-top: none;
 }
