--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,10 @@
     box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.5);
 }
 
-
+.cell.taken:hover{
+    -webkit-box-shadow: 0px 0px 15px 1px rgba(255, 0, 0, 0.5); 
+    box-shadow: 0px 0px 15px 1px rgba(255,0,0,0.5);
+}
 
 .cell:first-child, .cell:nth-child(2), .cell:nth-child(3){
     border-top: none;
