--- a/styles/style.css
+++ b/styles/style.css
@@ -32,13 +32,16 @@ body{
 }
 
 .cell:hover{
-    -webkit-box-shadow: 0px 0px 15px -2px rgba(0,255,0,0.3); 
-    box-shadow: 0px 0px 15px -2px rgba(0,255,0,0.3);
+    -webkit-box-shadow: 0px 0px 15px -2px rgba(0,0,0,0.3); 
+    box-shadow: 0px 0px 15px -2px rgba(0,0,0,0.3);
+    background-color: rgba(0, 255, 0, 0.2);
 }
 
 .cell.taken:hover{
-    -webkit-box-shadow: 0px 0px 15px -2px rgba(255, 0, 0, 0.3); 
-    box-shadow: 0px 0px 15px -2px rgba(255,0,0,0.3);
+    -webkit-box-shadow: 0px 0px 15px -2px rgba(0, 0, 0, 0.3); 
+    box-shadow: 0px 0px 15px -2px rgba(0,0,0,0.3);
+    background-color: rgba(255, 0, 0, 0.2);
+    cursor: not-allowed;
 }
 
 .cell:first-child, .cell:nth-child(2), .cell:nth-child(3){
