--- a/styles/style.css
+++ b/styles/style.css
@@ -67,9 +67,10 @@ body{
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0 ,0 , .9);
+    background-color: rgba(0, 0 ,0 , .7);
     justify-content: center;
     justify-items: center;
+    align-items: center;
     color: white;
     font-size: 5rem;
     flex-direction: column;
