--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ body{
     vertical-align: middle;
     line-height: 100px;
     text-align: center;
-    border: 1px solid black;
+    border: 4px solid gainsboro;
     font-size: 70px;
     font-weight: 700;
     cursor: pointer;
