--- a/styles/style.css
+++ b/styles/style.css
@@ -108,3 +108,28 @@ body{
 .winner-message.show{
     display: flex;
 }
+
+
+.starting-message{
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    color: black;
+    font-size: 5rem;
+    flex-direction: column;
+}
+
+.starting-message-header{
+
+}
+
+.starting-message.show{
+    display: flex;
+}
