--- a/styles/style.css
+++ b/styles/style.css
@@ -42,9 +42,10 @@ body{
     line-height: 100px;
     text-align: center;
     border: 4px solid gainsboro;
-    font-size: 70px;
+    font-size: 80px;
     font-weight: 700;
     cursor: pointer;
+    font-family: 'Blinker', sans-serif;
 }
 
 .cell:hover{
